More features and fixes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+</body>
+</html>
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>home</title>
+        <title>Smart E-Tuition Information</title>
 
         <!-- font awesome cdn link  -->
         <link
@@ -17,17 +19,17 @@
     </head>
     <body>
         <!-- header section starts  -->
-
         <header class="header">
-            <a href="home.html" class="logo">
-                <i class="fas fa-graduation-cap"></i> educa
+            <a href="index.html" class="logo">
+                <!-- <img src="images/letuscorelogocircle.png" width="50"></img> -->
+                Let Us Score!
             </a>
 
             <div id="menu-btn" class="fas fa-bars"></div>
 
             <nav class="navbar">
                 <ul>
-                    <li><a href="home.html">home</a></li>
+                    <li><a href="index.html">home</a></li>
                     <li><a href="about.html">about</a></li>
                     <li>
                         <a href="#">courses +</a>
@@ -76,27 +78,27 @@
         <section class="category">
             <a href="#" class="box">
                 <img src="images/category-1.png" alt="" />
-                <h3>computer science</h3>
+                <h3>Mathematics</h3>
             </a>
 
             <a href="#" class="box">
                 <img src="images/category-2.png" alt="" />
-                <h3>biology & life</h3>
+                <h3>Additional Mathematics</h3>
             </a>
 
             <a href="#" class="box">
                 <img src="images/category-3.png" alt="" />
-                <h3>business analysis</h3>
+                <h3>Physics</h3>
             </a>
 
             <a href="#" class="box">
                 <img src="images/category-4.png" alt="" />
-                <h3>social science</h3>
+                <h3>Chemistry</h3>
             </a>
 
             <a href="#" class="box">
                 <img src="images/category-5.png" alt="" />
-                <h3>data analysis</h3>
+                <h3>Biology</h3>
             </a>
         </section>
 
@@ -108,7 +110,7 @@
             <div class="box-container">
                 <div class="box">
                     <h3>explore</h3>
-                    <a href="home.html">
+                    <a href="index.html">
                         <i class="fas fa-arrow-right"></i> home
                     </a>
                     <a href="about.html">
@@ -190,7 +192,7 @@
             </div>
 
             <div class="credit">
-                created by <span>mr. web designer</span> | all rights reserved!
+                TM & Copyright 2022 Let Us Score! All rights reserved.
             </div>
         </section>
 
