More updates and fixes

--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Smart E-Tuition Information</title>
-
-        <!-- font awesome cdn link  -->
+        <!-- Font awesome cdn link  -->
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         />
-
-        <!-- custom css file link  -->
+        <!-- CSS link -->
         <link rel="stylesheet" href="css/style.css" />
+        <!-- Title-->
+        <title>Smart E-Tuition Information</title>
+        <!-- Image beside title -->
+        <link rel="icon" href="images/favicon.ico" />
     </head>
     <body>
         <!-- header section starts  -->
         <header class="header">
+            
             <a href="index.html" class="logo">
-                <!-- <img src="images/letuscorelogocircle.png" width="50"></img> -->
+                <!-- <img src="images/logo.png" width="50"></img> -->
                 Let Us Score!
             </a>
 
@@ -29,45 +31,43 @@
 
             <nav class="navbar">
                 <ul>
-                    <li><a href="index.html">home</a></li>
-                    <li><a href="about.html">about</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li>
-                        <a href="#">courses +</a>
+                        <a href="#">Courses +</a>
                         <ul>
-                            <li><a href="course-1.html">course 01</a></li>
-                            <li><a href="course-2.html">course 02</a></li>
-                            <li><a href="course-3.html">course 03</a></li>
+                            <li><a href="course-1.html">Mathematics</a></li>
+                            <li><a href="course-2.html">Add. Mathematics</a></li>
+                            <li><a href="course-3.html">Physics</a></li>
+                            <li><a href="course-4.html">Chemistry</a></li>
+                            <li><a href="course-5.html">Biology</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#">pages +</a>
+                        <a href="#">Pages +</a>
                         <ul>
-                            <li><a href="teachers.html">teachers</a></li>
-                            <li><a href="blog.html">blogs</a></li>
+                            <li><a href="teachers.html">Teachers</a></li>
+                            <li><a href="blog.html">Blogs</a></li>
                         </ul>
                     </li>
-                    <li><a href="contact.html">contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
-
         <!-- header section ends -->
 
         <!-- home section starts  -->
-
         <section class="home">
             <div class="image">
                 <img src="images/home-img.png" alt="" />
             </div>
 
             <div class="content">
-                <h3>your course to success</h3>
+                <h3>Smart E-Tuition Information</h3>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Culpa cumque neque quam amet perferendis sed rem ut tenetur
-                    porro praesentium.
+                    "Education is the most powerful weapon which you can use to change the world" - Nelson Mandela
                 </p>
-                <a href="#" class="btn">get started</a>
+                <a href="#" class="btn">Register Now!</a>
             </div>
         </section>
 
