--- a/blog.html
+++ b/blog.html
@@ -4,15 +4,19 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Smart E-Tuition Information</title>
 
-        <!-- font awesome cdn link  -->
+        <!-- Title-->
+        <title>Smart E-Tuition Information</title>
+        <!-- Image beside title -->
+        <link rel="icon" href="images/logo.png" />
+
+        <!-- Font awesome cdn link  -->
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         />
 
-        <!-- custom css file link  -->
+        <!-- CSS link -->
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
@@ -27,24 +31,28 @@
 
             <nav class="navbar">
                 <ul>
-                    <li><a href="home.html">home</a></li>
-                    <li><a href="about.html">about</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li>
-                        <a href="#">courses +</a>
+                        <a href="#">Courses +</a>
                         <ul>
-                            <li><a href="course-1.html">course 01</a></li>
-                            <li><a href="course-2.html">course 02</a></li>
-                            <li><a href="course-3.html">course 03</a></li>
+                            <li><a href="course-1.html">Mathematics</a></li>
+                            <li>
+                                <a href="course-2.html">Add. Mathematics</a>
+                            </li>
+                            <li><a href="course-3.html">Physics</a></li>
+                            <li><a href="course-4.html">Chemistry</a></li>
+                            <li><a href="course-5.html">Biology</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#">pages +</a>
+                        <a href="#">Pages +</a>
                         <ul>
-                            <li><a href="teachers.html">teachers</a></li>
-                            <li><a href="blog.html">blogs</a></li>
+                            <li><a href="teachers.html">Teachers</a></li>
+                            <li><a href="blog.html">Blogs</a></li>
                         </ul>
                     </li>
-                    <li><a href="contact.html">contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
