--- a/home.html
+++ b/home.html
@@ -64,9 +64,9 @@
 
             <div class="content">
                 <img src="images/logocircle.png"></img>
-                <h3>Smart E-Tuition Information</h3>
+                <h3>Smart <br>E-Tuition Information</h3>
                 <p>
-                    Let Us Score! will assist you in achieving the greatest possible results in your Sijil Pelajaran Malaysia. Join now and embark on a fantastic journey with us! <br>
+                    Let Us Score! will assist you in achieving the greatest possible results in your <i>Sijil Pelajaran Malaysia.</i> Join now and embark on a fantastic journey with us! <br>
                     "Education is the most powerful weapon which you can use to change the world" - Nelson Mandela
                 </p>
                 <a href="#" class="btn">Register Now!</a>
