--- a/subjects/maths.html
+++ b/subjects/maths.html
@@ -4,19 +4,15 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>course-2</title>
 
-        <!-- Title-->
-        <title>Smart E-Tuition Information</title>
-        <!-- Image beside title -->
-        <link rel="icon" href="images/logo.png" />
-
-        <!-- Font awesome cdn link  -->
+        <!-- font awesome cdn link  -->
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         />
 
-        <!-- CSS link -->
+        <!-- custom css file link  -->
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
@@ -31,28 +27,24 @@
 
             <nav class="navbar">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="home.html">home</a></li>
+                    <li><a href="about.html">about</a></li>
                     <li>
-                        <a href="#">Courses +</a>
+                        <a href="#">courses +</a>
                         <ul>
-                            <li><a href="course-1.html">Mathematics</a></li>
-                            <li>
-                                <a href="course-2.html">Add. Mathematics</a>
-                            </li>
-                            <li><a href="course-3.html">Physics</a></li>
-                            <li><a href="course-4.html">Chemistry</a></li>
-                            <li><a href="course-5.html">Biology</a></li>
+                            <li><a href="course-1.html">course 01</a></li>
+                            <li><a href="course-2.html">course 02</a></li>
+                            <li><a href="course-3.html">course 03</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Pages +</a>
+                        <a href="#">pages +</a>
                         <ul>
-                            <li><a href="teachers.html">Teachers</a></li>
-                            <li><a href="blog.html">Blogs</a></li>
+                            <li><a href="teachers.html">teachers</a></li>
+                            <li><a href="blog.html">blogs</a></li>
                         </ul>
                     </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -60,105 +52,129 @@
         <!-- header section ends -->
 
         <section class="heading">
-            <h3>course 01</h3>
-            <p><a href="home.html">home >></a> course-1</p>
+            <h3>course 02</h3>
+            <p><a href="home.html">home >></a> course-2</p>
         </section>
 
-        <!-- course-1 section starts  -->
+        <!-- course-2 section starts  -->
 
-        <section class="course-1">
+        <section class="course-2">
             <div class="box">
-                <img src="images/course-1.png" alt="" />
-                <h3>web design</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Cumque, earum.
-                </p>
-                <a href="#" class="btn">read more</a>
+                <div class="image">
+                    <img src="images/main-course-1.png" alt="" />
+                </div>
+                <div class="content">
+                    <span>business</span>
+                    <h3>learning is what makes you perfect</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quos, quam.
+                    </p>
+                    <a href="#" class="btn">read more</a>
+                    <div class="icons">
+                        <a href="#"> <i class="fas fa-book"></i> 12 modules </a>
+                        <a href="#"> <i class="fas fa-clock"></i> 6 hours </a>
+                    </div>
+                </div>
             </div>
 
             <div class="box">
-                <img src="images/course-2.png" alt="" />
-                <h3>seo marketing</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Cumque, earum.
-                </p>
-                <a href="#" class="btn">read more</a>
+                <div class="image">
+                    <img src="images/main-course-2.png" alt="" />
+                </div>
+                <div class="content">
+                    <span>language</span>
+                    <h3>learning is what makes you perfect</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quos, quam.
+                    </p>
+                    <a href="#" class="btn">read more</a>
+                    <div class="icons">
+                        <a href="#"> <i class="fas fa-book"></i> 12 modules </a>
+                        <a href="#"> <i class="fas fa-clock"></i> 6 hours </a>
+                    </div>
+                </div>
             </div>
 
             <div class="box">
-                <img src="images/course-3.png" alt="" />
-                <h3>science & biology</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Cumque, earum.
-                </p>
-                <a href="#" class="btn">read more</a>
+                <div class="image">
+                    <img src="images/main-course-3.png" alt="" />
+                </div>
+                <div class="content">
+                    <span>development</span>
+                    <h3>learning is what makes you perfect</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quos, quam.
+                    </p>
+                    <a href="#" class="btn">read more</a>
+                    <div class="icons">
+                        <a href="#"> <i class="fas fa-book"></i> 12 modules </a>
+                        <a href="#"> <i class="fas fa-clock"></i> 6 hours </a>
+                    </div>
+                </div>
             </div>
 
             <div class="box">
-                <img src="images/course-4.png" alt="" />
-                <h3>music & dance</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Cumque, earum.
-                </p>
-                <a href="#" class="btn">read more</a>
+                <div class="image">
+                    <img src="images/main-course-4.png" alt="" />
+                </div>
+                <div class="content">
+                    <span>teaching</span>
+                    <h3>learning is what makes you perfect</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quos, quam.
+                    </p>
+                    <a href="#" class="btn">read more</a>
+                    <div class="icons">
+                        <a href="#"> <i class="fas fa-book"></i> 12 modules </a>
+                        <a href="#"> <i class="fas fa-clock"></i> 6 hours </a>
+                    </div>
+                </div>
             </div>
 
             <div class="box">
-                <img src="images/course-5.png" alt="" />
-                <h3>digital marketing</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Cumque, earum.
-                </p>
-                <a href="#" class="btn">read more</a>
+                <div class="image">
+                    <img src="images/main-course-5.png" alt="" />
+                </div>
+                <div class="content">
+                    <span>designing</span>
+                    <h3>learning is what makes you perfect</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quos, quam.
+                    </p>
+                    <a href="#" class="btn">read more</a>
+                    <div class="icons">
+                        <a href="#"> <i class="fas fa-book"></i> 12 modules </a>
+                        <a href="#"> <i class="fas fa-clock"></i> 6 hours </a>
+                    </div>
+                </div>
             </div>
 
             <div class="box">
-                <img src="images/course-6.png" alt="" />
-                <h3>maths & statistics</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Cumque, earum.
-                </p>
-                <a href="#" class="btn">read more</a>
-            </div>
-
-            <div class="box">
-                <img src="images/course-7.png" alt="" />
-                <h3>data analysis</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Cumque, earum.
-                </p>
-                <a href="#" class="btn">read more</a>
-            </div>
-
-            <div class="box">
-                <img src="images/course-8.png" alt="" />
-                <h3>email marketing</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Cumque, earum.
-                </p>
-                <a href="#" class="btn">read more</a>
-            </div>
-
-            <div class="box">
-                <img src="images/course-9.png" alt="" />
-                <h3>graphic design</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Cumque, earum.
-                </p>
-                <a href="#" class="btn">read more</a>
+                <div class="image">
+                    <img src="images/main-course-6.png" alt="" />
+                </div>
+                <div class="content">
+                    <span>speaking</span>
+                    <h3>learning is what makes you perfect</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quos, quam.
+                    </p>
+                    <a href="#" class="btn">read more</a>
+                    <div class="icons">
+                        <a href="#"> <i class="fas fa-book"></i> 12 modules </a>
+                        <a href="#"> <i class="fas fa-clock"></i> 6 hours </a>
+                    </div>
+                </div>
             </div>
         </section>
 
-        <!-- course-1 section ends -->
+        <!-- course-2 section ends -->
 
         <!-- footer section starts  -->
 
