Fix navigation, optimize code

--- a/blog.html
+++ b/blog.html
@@ -4,60 +4,67 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-        <!-- Title-->
-        <title>Smart E-Tuition Information</title>
-        <!-- Image beside title -->
-        <link rel="icon" href="images/logo.png" />
-
-        <!-- Font awesome cdn link  -->
+        <!-- Font-awesome link  -->
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         />
-
-        <!-- CSS link -->
-        <link rel="stylesheet" href="css/style.css" />
+        <!-- CSS link link  -->
+        <!-- . means "current directory" & .. means "parent directory"-->
+        <link rel="stylesheet" href="../css/style.css" />
+        <!-- Title-->
+        <title>Smart E-Tuition Information</title>
+        <!-- Image beside title -->
+        <link rel="icon" href="images/icon.ico" />
     </head>
     <body>
-        <!-- header section starts  -->
-
+        <!-- Header starts  -->
         <header class="header">
-            <a href="home.html" class="logo">
-                <i class="fas fa-graduation-cap"></i> educa
+            <a href="../home.html" class="logo">
+                <!-- <img src="images/logo.png" width="50"></img> -->
+                Let Us Score!
             </a>
-
             <div id="menu-btn" class="fas fa-bars"></div>
-
             <nav class="navbar">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="../home.html">Home</a></li>
+                    <li><a href="../about.html">About Us</a></li>
                     <li>
                         <a href="#">Courses +</a>
                         <ul>
-                            <li><a href="course-1.html">Mathematics</a></li>
                             <li>
-                                <a href="course-2.html">Add. Mathematics</a>
+                                <a href="../subjects/maths.html">Mathematics</a>
                             </li>
-                            <li><a href="course-3.html">Physics</a></li>
-                            <li><a href="course-4.html">Chemistry</a></li>
-                            <li><a href="course-5.html">Biology</a></li>
+                            <li>
+                                <a href="../subjects/addmaths.html">
+                                    Add. Mathematics
+                                </a>
+                            </li>
+                            <li>
+                                <a href="../subjects/physics.html">Physics</a>
+                            </li>
+                            <li>
+                                <a href="../subjects/chemistry.html">
+                                    Chemistry
+                                </a>
+                            </li>
+                            <li>
+                                <a href="../subjects/biology.html">Biology</a>
+                            </li>
                         </ul>
                     </li>
                     <li>
                         <a href="#">Pages +</a>
                         <ul>
-                            <li><a href="teachers.html">Teachers</a></li>
-                            <li><a href="blog.html">Blogs</a></li>
+                            <li><a href="../teachers.html">Teachers</a></li>
+                            <li><a href="../blog.html">Blogs</a></li>
                         </ul>
                     </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
-
-        <!-- header section ends -->
+        <!-- Header ends -->
 
         <section class="heading">
             <h3>our blogs</h3>
