--- a/home.html
+++ b/home.html
@@ -16,47 +16,59 @@
         <!-- Title-->
         <title>Smart E-Tuition Information</title>
         <!-- Image beside title -->
-        <link rel="icon" href="images/favicon.ico" />
+        <link rel="icon" href="images/icon.ico" />
     </head>
     <body>
         <!-- header section starts  -->
         <header class="header">
             
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <!-- <img src="images/logo.png" width="50"></img> -->
                 Let Us Score!
             </a>
-
             <div id="menu-btn" class="fas fa-bars"></div>
-
             <nav class="navbar">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="../home.html">Home</a></li>
+                    <li><a href="../about.html">About Us</a></li>
                     <li>
                         <a href="#">Courses +</a>
                         <ul>
-                            <li><a href="subjects/maths.html">Mathematics</a></li>
-                            <li><a href="subjects/addmaths.html">Add. Mathematics</a></li>
-                            <li><a href="subjects/physics.html">Physics</a></li>
-                            <li><a href="subjects/chemistry.html">Chemistry</a></li>
-                            <li><a href="subjects/biology.html">Biology</a></li>
+                            <li>
+                                <a href="../subjects/maths.html">Mathematics</a>
+                            </li>
+                            <li>
+                                <a href="../subjects/addmaths.html">
+                                    Add. Mathematics
+                                </a>
+                            </li>
+                            <li>
+                                <a href="../subjects/physics.html">Physics</a>
+                            </li>
+                            <li>
+                                <a href="../subjects/chemistry.html">
+                                    Chemistry
+                                </a>
+                            </li>
+                            <li>
+                                <a href="../subjects/biology.html">Biology</a>
+                            </li>
                         </ul>
                     </li>
                     <li>
                         <a href="#">Pages +</a>
                         <ul>
-                            <li><a href="teachers.html">Teachers</a></li>
-                            <li><a href="blog.html">Blogs</a></li>
+                            <li><a href="../teachers.html">Teachers</a></li>
+                            <li><a href="../blog.html">Blogs</a></li>
                         </ul>
                     </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
-        <!-- header section ends -->
+        <!-- Header ends -->
 
-        <!-- home section starts  -->
+        <!-- Home starts  -->
         <section class="home">
             <div class="image">
                 <img src="images/home-img.png" alt="" />
@@ -69,7 +81,8 @@
                     Let Us Score! will assist you in achieving the greatest possible results in your <i>Sijil Pelajaran Malaysia.</i> Join now and embark on a fantastic journey with us! <br>
                     "Education is the most powerful weapon which you can use to change the world" - Nelson Mandela
                 </p>
-                <a href="#" class="btn">Register Now!</a>
+                <a href="#" class="btn">Register</a>
+                <a href="#" class="btn">Login</a>
             </div>
         </section>
 
