--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- 3s refresh to load home.html for loader -->
-        <meta http-equiv="refresh" content="3; home.html" />
+        <meta http-equiv="refresh" content="3; ../home.html" />
         <!-- CSS File -->
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="../css/style.css" />
         <!-- Title-->
         <title>Smart E-Tuition Information</title>
         <!-- Logo beside title -->
-        <link rel="icon" href="images/favicon.ico" />
+        <link rel="icon" href="../images/favicon.ico" />
     </head>
     <body>
         <!-- JS File -->
-        <script src="js/script.js"></script>
+        <script src="../js/script.js"></script>
         <!-- Loader  -->
         <div class="loader-container">
-            <img src="images/loader.gif" alt="" />
+            <img src="../images/loader.gif" alt="" />
         </div>
     </body>
 </html>
