Update coding and fixes

--- a/aboutteam.html
+++ b/aboutteam.html
@@ -1,28 +1,26 @@
-</body>
-</html>
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- Font awesome cdn link  -->
+        <!-- Font-awesome link  -->
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         />
-        <!-- CSS link -->
-        <link rel="stylesheet" href="css/style.css" />
+        <!-- CSS link link  -->
+        <!-- . means "current directory" & .. means "parent directory"-->
+        <link rel="stylesheet" href="../css/style.css" />
         <!-- Title-->
         <title>Smart E-Tuition Information</title>
         <!-- Image beside title -->
         <link rel="icon" href="images/icon.ico" />
     </head>
     <body>
-        <!-- header section starts  -->
+        <!-- Header starts  -->
         <header class="header">
-            
-            <a href="../index.html" class="logo">
+            <a href="../home.html" class="logo">
                 <!-- <img src="images/logo.png" width="50"></img> -->
                 Let Us Score!
             </a>
@@ -30,17 +28,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="../home.html">Home</a></li>
-                    <li>
-                        <a href="#">About +</a>
-                        <ul>
-                            <li>
-                                <a href="../aboutteam.html">The Team</a>
-                            </li>
-                            <li>
-                                <a href="../aboutteacher.html">The Teachers</a>
-                            </li>
-                        </ul>
-                    </li>
+                    <li><a href="../about.html">About Us</a></li>
                     <li>
                         <a href="#">Courses +</a>
                         <ul>
@@ -76,58 +64,33 @@
                 </ul>
             </nav>
         </header>
-        <!-- Header ends -->
+        <!-- header section ends -->
 
-        <!-- Home starts  -->
-        <section class="home">
+        <section class="heading">
+            <h3>about us</h3>
+            <p><a href="home.html">home >></a> about</p>
+        </section>
+
+        <!-- about section starts  -->
+
+        <section class="about">
             <div class="image">
-                <img src="images/home-img.png" alt="" />
+                <img src="images/about-img.png" alt="" />
             </div>
 
             <div class="content">
-                <img src="images/logocircle.png"></img>
-                <h3>Smart <br>E-Tuition Information</h3>
+                <h3>I will stay with you until you pass your exam.</h3>
                 <p>
-                    Let Us Score! will assist you in achieving the greatest possible results in your <i>Sijil Pelajaran Malaysia.</i> Join now and embark on a fantastic journey with us! <br>
-                    "Education is the most powerful weapon which you can use to change the world" - Nelson Mandela
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id
+                    ducimus at maiores repellat aut debitis aliquam esse,
+                    quisquam nobis laborum velit voluptate excepturi obcaecati
+                    dignissimos omnis. Fugiat hic quod nobis?
                 </p>
-                <a href="#" class="btn">Register</a>
-                <a href="#" class="btn">Login</a>
+                <a href="#" class="btn">learn more</a>
             </div>
         </section>
 
-        <!-- home section ends -->
-
-        <!-- categories section starts  -->
-
-        <section class="category">
-            <a href="#" class="box">
-                <img src="images/category-1.png" alt="" />
-                <h3>Mathematics</h3>
-            </a>
-
-            <a href="#" class="box">
-                <img src="images/category-2.png" alt="" />
-                <h3>Additional Mathematics</h3>
-            </a>
-
-            <a href="#" class="box">
-                <img src="images/category-3.png" alt="" />
-                <h3>Physics</h3>
-            </a>
-
-            <a href="#" class="box">
-                <img src="images/category-4.png" alt="" />
-                <h3>Chemistry</h3>
-            </a>
-
-            <a href="#" class="box">
-                <img src="images/category-5.png" alt="" />
-                <h3>Biology</h3>
-            </a>
-        </section>
-
-        <!-- categories section ends -->
+        <!-- about section ends -->
 
         <!-- footer section starts  -->
 
@@ -135,7 +98,7 @@
             <div class="box-container">
                 <div class="box">
                     <h3>explore</h3>
-                    <a href="index.html">
+                    <a href="home.html">
                         <i class="fas fa-arrow-right"></i> home
                     </a>
                     <a href="about.html">
@@ -207,14 +170,17 @@
 
                 <div class="box">
                     <h3>follow us</h3>
-                    <a href="#"> <i class="fab fa-facebook-f"></i> Facebook </a>
-                    <a href="#"> <i class="fab fa-twitter"></i> Twitter </a>
-                    <a href="#"> <i class="fab fa-instagram"></i> Instagram </a>
+                    <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
+                    <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
+                    <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
+                    <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
+                    <a href="#"> <i class="fab fa-pinterest"></i> pinterest </a>
+                    <a href="#"> <i class="fab fa-github"></i> github </a>
                 </div>
             </div>
 
             <div class="credit">
-                TM & Copyright 2022 Let Us Score! All rights reserved.
+                created by <span>mr. web designer</span> | all rights reserved!
             </div>
         </section>
 
