--- a/php/login.html
+++ b/php/login.html
@@ -4,7 +4,19 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Test login page</title>
     </head>
-    <body></body>
+    <body>
+        <form method="post" action="login.php">
+            <input type="text" name="userUname" placeholder="Username" /><br />
+            <input
+                type="password"
+                name="userPassw"
+                placeholder="Password"
+            /><br />
+            <br />
+            <input type="reset" />
+            <input type="submit" name="login" value="Login" />
+        </form>
+    </body>
 </html>
