Complete for registration system

--- a/php/register.html
+++ b/php/register.html
@@ -4,68 +4,112 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Register page</title>
+        <title>Smart E-Tuition Register Page</title>
+        <!-- CSS -->
+        <link rel="stylesheet" href="../css/style.css" />
+        <!-- Iconscout CSS -->
+        <link
+            rel="stylesheet"
+            href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+        />
     </head>
     <body>
-        <form name="registerForm" method="post" action="register.php">
-            Username :
-            <input type="text" name="userUname" required />
-            <br />
-            Password :
-            <input type="password" name="userPassw" required />
-            <br />
-            Full name :
-            <input type="text" name="userName" placeholder="name" required />
-            <br />
-            Phone number :
-            <input
-                type="text"
-                name="userPhone"
-                placeholder="0123456789"
-                required
-            />
-            <br />
-            Email:
-            <input
-                type="text"
-                name="userEmail"
-                placeholder="email@gmail.com"
-                required
-            />
-            <br />
+        <div class="container">
+            <header>Registration</header>
+            <form name="registerForm" method="post" action="register.php">
+                <div class="details personal">
+                    <span class="title">Account Details</span>
+                    <div class="fields">
+                        <div class="input-field">
+                            <label>Username</label>
+                            <input
+                                type="text"
+                                placeholder="Enter your username"
+                                name="userUname"
+                                required
+                            />
+                        </div>
+                        <div class="input-field">
+                            <label>Password</label>
+                            <input
+                                type="password"
+                                placeholder="Enter your password"
+                                name="userPassw"
+                                required
+                            />
+                        </div>
+                        <div class="input-field">
+                            <label>Email</label>
+                            <input
+                                type="text"
+                                placeholder="name@domainname"
+                                name="userEmail"
+                                required
+                            />
+                        </div>
+                    </div>
+                    <div class="details ID">
+                        <span class="title">Personal Details</span>
 
-            Gender :
-            <input type="radio" name="userGender" value="1" required /> Male
-            <input type="radio" name="userGender" value="2" required /> Female
-            <br />
+                        <div class="fields">
+                            <div class="input-field">
+                                <label>Full name</label>
+                                <input
+                                    type="text"
+                                    placeholder="Enter your full name"
+                                    name="userName"
+                                    required
+                                />
+                            </div>
+                            <div class="input-field">
+                                <label>Gender</label>
+                                <select name="userGender" required>
+                                    <option disabled selected>
+                                        Select gender
+                                    </option>
+                                    <option value="1">Male</option>
+                                    <option value="2">Female</option>
+                                </select>
+                            </div>
+                            <div class="input-field">
+                                <label>Phone Number</label>
+                                <input
+                                    type="text"
+                                    placeholder="0123456789"
+                                    name="userPhone"
+                                    required
+                                />
+                            </div>
+                            <div class="input-field">
+                                <label>Birthdate</label>
+                                <input
+                                    type="date"
+                                    name="userBirthdate"
+                                    required
+                                />
+                            </div>
 
-            Birthdate :
-            <input
-                type="date"
-                name="userBirthdate"
-                placeholder="Birthdate"
-                required
-            />
-            <br />
+                            <div class="input-fieldLong">
+                                <label>Address</label>
+                                <input
+                                    type="text"
+                                    placeholder="Enter your address"
+                                    name="userAddress"
+                                    required
+                                />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="buttons">
+                    <button type="submit" name="registerButton" value="Submit">
+                        <span class="btnText"> Register </span>
+                        <i class="uil uil-navigator"></i>
+                    </button>
+                </div>
+            </form>
+        </div>
 
-            Address:
-            <input
-                type="text"
-                name="userAddress"
-                placeholder="Address"
-                required
-            />
-            <br />
-            <br />
-
-            <!-- Reset button -->
-            <input type="reset" />
-
-            <!-- Submit button -->
-            <input type="submit" name="register" value="Register" />
-        </form>
-
-        <!-- JS File -->
         <script src="../js/script.js"></script>
     </body>
 </html>
