--- a/php/register.html
+++ b/php/register.html
@@ -13,7 +13,7 @@
             href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
         />
     </head>
-    <body>
+    <body id = "register">
         <div class="container">
             <header>Registration</header>
             <form name="registerForm" method="post" action="register.php">
