--- a/subjects/physics.html
+++ b/subjects/physics.html
@@ -20,7 +20,7 @@
     <body>
         <!-- Header starts  -->
         <header class="header">
-            <a href="../home.html" class="logo">
+            <a href="../index.html" class="logo">
                 <!-- <img src="images/logo.png" width="50"></img> -->
                 Let Us Score!
             </a>
@@ -28,28 +28,34 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="../home.html">Home</a></li>
-                    <li><a href="../about.html">About Us</a></li>
+                    <li>
+                        <a href="#">About +</a>
+                        <ul>
+                            <li>
+                                <a href="../aboutteam.html">The Team</a>
+                            </li>
+                            <li>
+                                <a href="../aboutteacher.html">The Teachers</a>
+                            </li>
+                        </ul>
+                    </li>
                     <li>
                         <a href="#">Courses +</a>
                         <ul>
                             <li>
-                                <a href="../subjects/maths.html">Mathematics</a>
+                                <a href="maths.html">Mathematics</a>
                             </li>
                             <li>
-                                <a href="../subjects/addmaths.html">
-                                    Add. Mathematics
-                                </a>
+                                <a href="addmaths.html"> Add. Mathematics </a>
                             </li>
                             <li>
-                                <a href="../subjects/physics.html">Physics</a>
+                                <a href="physics.html">Physics</a>
                             </li>
                             <li>
-                                <a href="../subjects/chemistry.html">
-                                    Chemistry
-                                </a>
+                                <a href="chemistry.html"> Chemistry </a>
                             </li>
                             <li>
-                                <a href="../subjects/biology.html">Biology</a>
+                                <a href="biology.html">Biology</a>
                             </li>
                         </ul>
                     </li>
@@ -243,6 +249,6 @@
         <!-- footer section ends -->
 
         <!-- custom js file link  -->
-        <script src="js/script.js"></script>
+        <script src="../js/script.js"></script>
     </body>
 </html>
