--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         />
         <!-- CSS link link  -->
         <!-- . means "current directory" & .. means "parent directory"-->
-        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <!-- Title-->
         <title>Smart E-Tuition Information</title>
         <!-- Image beside title -->
@@ -20,47 +20,57 @@
     <body>
         <!-- Header starts  -->
         <header class="header">
-            <a href="../home.html" class="logo">
+            <a href="index.html" class="logo">
                 <!-- <img src="images/logo.png" width="50"></img> -->
                 Let Us Score!
             </a>
             <div id="menu-btn" class="fas fa-bars"></div>
             <nav class="navbar">
                 <ul>
-                    <li><a href="../home.html">Home</a></li>
-                    <li><a href="../about.html">About Us</a></li>
+                    <li><a href="home.html">Home</a></li>
+                    <li>
+                        <a href="#">About +</a>
+                        <ul>
+                            <li>
+                                <a href="aboutteam.html">The Team</a>
+                            </li>
+                            <li>
+                                <a href="aboutteacher.html">The Teachers</a>
+                            </li>
+                        </ul>
+                    </li>
                     <li>
                         <a href="#">Courses +</a>
                         <ul>
                             <li>
-                                <a href="../subjects/maths.html">Mathematics</a>
+                                <a href="subjects/maths.html">Mathematics</a>
                             </li>
                             <li>
-                                <a href="../subjects/addmaths.html">
+                                <a href="subjects/addmaths.html">
                                     Add. Mathematics
                                 </a>
                             </li>
                             <li>
-                                <a href="../subjects/physics.html">Physics</a>
+                                <a href="subjects/physics.html">Physics</a>
                             </li>
                             <li>
-                                <a href="../subjects/chemistry.html">
+                                <a href="subjects/chemistry.html">
                                     Chemistry
                                 </a>
                             </li>
                             <li>
-                                <a href="../subjects/biology.html">Biology</a>
+                                <a href="subjects/biology.html">Biology</a>
                             </li>
                         </ul>
                     </li>
                     <li>
                         <a href="#">Pages +</a>
                         <ul>
-                            <li><a href="../teachers.html">Teachers</a></li>
-                            <li><a href="../blog.html">Blogs</a></li>
+                            <li><a href="teachers.html">Teachers</a></li>
+                            <li><a href="blog.html">Blogs</a></li>
                         </ul>
                     </li>
-                    <li><a href="../contact.html">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
