Updated register interface, changed theme colour

--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
         <!-- Header ends -->
 
         <section class="heading">
-            <h3>contact us</h3>
+            <h3>Contact Us</h3>
             <p><a href="home.html">home >></a> contact</p>
         </section>
 
@@ -85,28 +85,29 @@
             <div class="icons-container">
                 <div class="icons">
                     <i class="fas fa-phone"></i>
-                    <h3>our number</h3>
-                    <p>+123-456-7890</p>
-                    <p>+111-222-3333</p>
+                    <h3>Our Number</h3>
+                    <p>+603-5637-3337</p>
+                    <p>+603-4023-9252</p>
                 </div>
 
                 <div class="icons">
-                    <i class="fas fa-envelope"></i>
-                    <h3>our email</h3>
-                    <p>shaikhanas@gmail.com</p>
-                    <p>anasbhai@gmail.com</p>
+                    <a href="mailto:vitemon659@3dinews.com"
+                        ><i class="fas fa-envelope"></i
+                    ></a>
+                    <h3>Our Email</h3>
+                    <p>letusscore@gmail.com</p>
                 </div>
 
                 <div class="icons">
                     <i class="fas fa-map-marker-alt"></i>
-                    <h3>our address</h3>
-                    <p>mumbai, india - 400104</p>
+                    <h3>Our Address</h3>
+                    <p>15, Jalan SS 15/5A, 47500, Subang Jaya, Selangor</p>
                 </div>
             </div>
 
             <div class="row">
                 <form action="">
-                    <h3>get in touch</h3>
+                    <h3>Leave Us a Message</h3>
                     <input type="text" placeholder="your name" class="box" />
                     <input
                         type="number"
@@ -126,7 +127,7 @@
 
                 <iframe
                     class="map"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15076.89592087332!2d72.8319697277345!3d19.14167056419224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b63aceef0c69%3A0x2aa80cf2287dfa3b!2sJogeshwari%20West%2C%20Mumbai%2C%20Maharashtra%20400047!5e0!3m2!1sen!2sin!4v1635757298406!5m2!1sen!2sin"
+                    src="https://maps.google.com/maps?q=15,%20Jalan%20SS%2015/5A,%2047500,%20Subang%20Jaya,%20Selangor&t=&z=13&ie=UTF8&iwloc=&output=embed"
                     allowfullscreen=""
                     loading="lazy"
                 ></iframe>
@@ -220,9 +221,7 @@
                 </div>
             </div>
 
-            <div class="credit">
-                created by <span>mr. web designer</span> | all rights reserved!
-            </div>
+            <div class="credit"></div>
         </section>
 
         <!-- footer section ends -->
