--- a/php/register.html
+++ b/php/register.html
@@ -13,7 +13,10 @@
             href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
         />
     </head>
-    <body id = "register">
+    <body id="register">
+        <div class="logoImage">
+            <img src="../images/logocircle.png" alt="Logo LUS" />
+        </div>
         <div class="container">
             <header>Registration</header>
             <form name="registerForm" method="post" action="register.php">
@@ -108,6 +111,10 @@
                     </button>
                 </div>
             </form>
+            <span class="text"
+                >Already a member?
+                <a href="login0.html">Login Now</a>
+            </span>
         </div>
 
         <script src="../js/script.js"></script>
