--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
 
             <div class="row">
                 <form action="">
-                    <h3>Leave Us a Message</h3>
+                    <h3>Leave us a message!</h3>
                     <input type="text" placeholder="your name" class="box" />
                     <input
                         type="number"
@@ -220,12 +220,9 @@
                     <a href="#"> <i class="fab fa-github"></i> github </a>
                 </div>
             </div>
-
-            <<<<<<< HEAD
-            <div class="credit"></div>
-            =======
-            <div class="credit"></div>
-            >>>>>>> da0bba8d041b2b22d13872f146c1eb4768466248
+            <div class="credit">
+                TM & Copyright 2022 Let Us Score! All rights reserved.
+            </div>
         </section>
 
         <!-- footer section ends -->
