Hyperlink for logo

--- a/php/register.html
+++ b/php/register.html
@@ -15,7 +15,9 @@
     </head>
     <body id="register">
         <div class="logoImage">
-            <img src="../images/logocircle.png" alt="Logo LUS" />
+            <a href="../home.html">
+                <img src="../images/logocircle.png" alt="Logo LUS" />
+            </a>
         </div>
         <div class="container">
             <header>Registration</header>
