Fix student, tutor page

--- a/php/register.html
+++ b/php/register.html
@@ -16,7 +16,7 @@
     <body id="register">
         <div class="logoImage">
             <a href="../home.html">
-                <img src="../images/logocircle.png" alt="Logo LUS" />
+                <img src="../images/logocircle.png" alt="Logo Let Us Score!" />
             </a>
         </div>
         <div class="container">
@@ -115,7 +115,7 @@
             </form>
             <span class="text"
                 >Already a member?
-                <a href="login0.html">Login Now</a>
+                <a href="login.html">Login Now</a>
             </span>
         </div>
 
